[package]
name = "entropy"
version = "1.0.0"
authors = ["tuxxy <me@johnpacific.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "entropy"
path = "src/lib.rs"

[[bin]]
name = "entropy"
path = "src/main.rs"

[dependencies.clap]
version = "3.0.0-beta.1"

[dev-dependencies.tempfile]
version = "3.1.0"
