[package]
name = "entropy-lib"
version = "1.0.2"
authors = ["tuxxy <me@johnpacific.com>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0"
keywords = ["entropy", "shannon-entropy"]
categories = ["command-line-utilities"]
description = "Measures the Shannon and metric entropy of files"
repository = "https://github.com/tuxxy/entropy"
documentation = "https://docs.rs/entropy-lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "entropy"
path = "src/lib.rs"

[[bin]]
name = "entropy"
path = "src/main.rs"

[dependencies.clap]
version = "3.0.0-beta.1"

[dev-dependencies.tempfile]
version = "3.1.0"
